# Progetto-Reti-di-calcolatori

./: .gitignore  README.md
Client/NegozioCliente/: .gitignore  pom.xml
Client/NegozioCliente/src/main/java/it/itsrizzoli/: App.java
Client/NegozioCliente/src/main/java/it/itsrizzoli/controller/: ControllerClientNegozio.java
Client/NegozioCliente/src/main/java/it/itsrizzoli/model/: ModelloClientNegozio.java  Prodotto.java  Transazione.java
Client/NegozioCliente/src/main/java/it/itsrizzoli/modelli/: ModelloClientNegozio.java  Prodotto.java  Transazione.java
Client/NegozioCliente/src/main/java/it/itsrizzoli/tcpip/: ClientConnessione.java  GestioneComunicazioneServer.java  ThreadClient.java
Client/NegozioCliente/src/main/java/it/itsrizzoli/tools/: CodiciStatoServer.java  EStato.java  GestioneComunicazioneServer.java  TypeThread.java
Client/NegozioCliente/src/main/java/it/itsrizzoli/ui/: ChangeIP.form  ChangeIP.java  ClientNegozioInterfaccia.java  NegozioClientUI.java
Client/NegozioCliente/src/main/java/it/itsrizzoli/view/: ChangeIP.form  ChangeIP.java  ClientNegozioInterfaccia.form  ClientNegozioInterfaccia.java  SchermoCustomVendita.form  SchermoCustomVendita.java
Client/NegozioCliente/src/test/java/it/itsrizzoli/: AppTest.java
Client/NegozioCliente/src/test/java/it/itsrizzoli/controller/: ControllerClientNegozioTest.java
Client/NegozioCliente/src/test/java/it/itsrizzoli/model/: ModelloClientNegozioTest.java  TransazioneTest.java
Client/NegozioCliente/src/test/java/it/itsrizzoli/tcpip/: GestioneComunicazioneServerTest.java
Server/: .gitignore  CMakeLists.txt  handleUpdateClients.c  main.c  main.cpp  products.csv  server.c  server.cpp  server.h  threadParameter.h
Server/handleJson/: handleJson.c  handleJson.h
Server/headers/: define.h  handleUpdateClients.h  product.h  server.h
Server/html/: index.html  prodotti.html
Server/include/: define.h  product.h
Server/include/sockets/: handleClient.c  handleClient.h  handleUpdateClients.c  server.c  server.h  socketFunctions.c  socketFunctions.h  webServer.c  webServer.h
Server/include/utils/: customCriticalSection.h  handleJson.c  handleJson.h  loadFile.c  loadFile.h  timeStamp.c  timeStamp.h
Server/utils/: customCriticalSection.c  handleJson.c  handleJson.h
